--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,10 @@
     <header>
         <div class="name">BALRAJ</div>
         <div class="nav">
-            <a href="Index.html">Home</a>
+            <a href="portfolio.html">Home</a>
             <a href="https://www.linkedin.com/in/balraj-mahto-659b98258/">Contact me</a>
             <a href="">Projects</a>
+
         </div>
     </header>
     <main>
@@ -49,8 +50,13 @@
                 <div class="pj-subtext">
                     A visually stunning landing page designed to captivate visitors and drive engagement. With sleek aesthetics and intuitive navigation, it delivers concise messaging and compelling calls-to-action. Seamlessly optimized for various devices, it ensures a seamless user experience, enticing visitors to explore further and convert into leads or customers.
                 </div>
+            </div>   
         </section>
     </main>
+    <div class="cv">
+    <a href="https://www.livecareer.co.uk/thumbnail/documentprod/8bacda7c-c0e1-4a6b-9361-e41fe724c47e/c5dcd5bb-0c61-4977-a5b2-5db9d94b229d/d96c8800-76b5-44b1-ae6e-4186d6a65dc6.svg" download="cv1.pdf">Download Resume</a>
+    </div>
+
     <br><br><br>
     <footer>
         <div class="ftext">Socials  :</div>
