--- a/calculater.html
+++ b/calculater.html
@@ -31,6 +31,6 @@
         <button onclick="operate(')')">)</button>
     </div>
 
-    <script src="cal.js"></script>
+    <script src="calulater.js"></script>
 </body>
 </html>
